[gd_scene load_steps=31 format=3 uid="uid://dyyfmxm8nnmty"]

[ext_resource type="Script" path="res://scenes/component/Inventory/inventory.gd" id="1_tvods"]
[ext_resource type="Texture2D" uid="uid://n8rym13ssyr1" path="res://assets/inv_card.png" id="2_0p086"]
[ext_resource type="Texture2D" uid="uid://bndthhriamtp" path="res://assets/inv_contract.png" id="2_32tha"]
[ext_resource type="Texture2D" uid="uid://bfqf8qr2rttiw" path="res://assets/inv_bag.png" id="2_xckeb"]
[ext_resource type="Texture2D" uid="uid://cggfhcptblvu2" path="res://assets/inv_friend.png" id="3_kd0kg"]
[ext_resource type="Texture2D" uid="uid://bt52rf4r5o7cs" path="res://assets/inv_money.png" id="4_spjje"]
[ext_resource type="Shader" path="res://scenes/component/Inventory/inventory.gdshader" id="6_onec0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1662g"]
shader = ExtResource("6_onec0")
shader_parameter/onoff = 1
shader_parameter/offset = Vector2(20, 25)
shader_parameter/modulate = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a84k6"]
size = Vector2(312.283, 91.62)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7rt5f"]
shader = ExtResource("6_onec0")
shader_parameter/onoff = 1
shader_parameter/offset = Vector2(20, 25)
shader_parameter/modulate = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_57ytf"]
size = Vector2(161.324, 324.559)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iwyyb"]
shader = ExtResource("6_onec0")
shader_parameter/onoff = 1
shader_parameter/offset = Vector2(20, 25)
shader_parameter/modulate = null

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vhdpm"]
radius = 117.766
height = 403.097

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oxh7g"]
shader = ExtResource("6_onec0")
shader_parameter/onoff = 1
shader_parameter/offset = Vector2(20, 25)
shader_parameter/modulate = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t3317"]
size = Vector2(190.294, 120.588)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qanm1"]
shader = ExtResource("6_onec0")
shader_parameter/onoff = 0
shader_parameter/offset = Vector2(20, 20)
shader_parameter/modulate = null

[sub_resource type="Animation" id="Animation_23u8h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.85, 0.85)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Card:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-270, -270)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Friend:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-270, -292.222)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Money:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-270, -270)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Contract:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-270, -270)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Card:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.8, 0.8)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Friend:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.8, 0.8)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Money:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.8, 0.8)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Contract:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.8, 0.8)]
}

[sub_resource type="Animation" id="Animation_8lapq"]
resource_name = "card_enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Card:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(0.9, 0.9)]
}

[sub_resource type="Animation" id="Animation_4rgqj"]
resource_name = "card_exit"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Card:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(0.8, 0.8)]
}

[sub_resource type="Animation" id="Animation_of4qt"]
resource_name = "contract_enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Contract:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(0.9, 0.9)]
}

[sub_resource type="Animation" id="Animation_8t7g3"]
resource_name = "contract_exit"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Contract:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(0.8, 0.8)]
}

[sub_resource type="Animation" id="Animation_gwxf2"]
resource_name = "friend_enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Friend:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(0.9, 0.9)]
}

[sub_resource type="Animation" id="Animation_hffi1"]
resource_name = "friend_exit"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Friend:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(0.8, 0.8)]
}

[sub_resource type="Animation" id="Animation_orgie"]
resource_name = "money_enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Money:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(0.9, 0.9)]
}

[sub_resource type="Animation" id="Animation_5vyhb"]
resource_name = "money_exit"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Money:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(0.8, 0.8)]
}

[sub_resource type="Animation" id="Animation_r3o3b"]
resource_name = "mouse_enter"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(0.95, 0.95)]
}

[sub_resource type="Animation" id="Animation_rtnhe"]
resource_name = "mouse_exit"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.95, 0.95), Vector2(0.8, 0.8)]
}

[sub_resource type="Animation" id="Animation_naxwk"]
resource_name = "on_cancel"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Card:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-100, -736.842), Vector2(-270, -270)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Friend:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-181.053, -497.895), Vector2(-270, -270)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Money:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-396.842, -576.842), Vector2(-270, -270)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Contract:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-200, -837.5), Vector2(-270, -270)]
}

[sub_resource type="Animation" id="Animation_7l63b"]
resource_name = "on_click"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Card:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-270, -270), Vector2(-100, -736.842)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Friend:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-270, -292.222), Vector2(-181.053, -497.895)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Money:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-270, -270), Vector2(-396.842, -576.842)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Contract:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-270, -270), Vector2(-200, -837.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ahtks"]
_data = {
"RESET": SubResource("Animation_23u8h"),
"card_enter": SubResource("Animation_8lapq"),
"card_exit": SubResource("Animation_4rgqj"),
"contract_enter": SubResource("Animation_of4qt"),
"contract_exit": SubResource("Animation_8t7g3"),
"friend_enter": SubResource("Animation_gwxf2"),
"friend_exit": SubResource("Animation_hffi1"),
"money_enter": SubResource("Animation_orgie"),
"money_exit": SubResource("Animation_5vyhb"),
"mouse_enter": SubResource("Animation_r3o3b"),
"mouse_exit": SubResource("Animation_rtnhe"),
"on_cancel": SubResource("Animation_naxwk"),
"on_click": SubResource("Animation_7l63b")
}

[node name="Inventory" type="Control"]
y_sort_enabled = true
layout_mode = 3
anchors_preset = 0
offset_left = 13.0
offset_top = 521.0
offset_right = 13.0
offset_bottom = 521.0
scale = Vector2(0.85, 0.85)
mouse_filter = 2
script = ExtResource("1_tvods")

[node name="Contract" type="TextureButton" parent="."]
material = SubResource("ShaderMaterial_1662g")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -270.0
offset_right = 270.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(270, 270)
mouse_filter = 1
texture_normal = ExtResource("2_32tha")

[node name="ContractArea2D" type="Area2D" parent="Contract"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Contract/ContractArea2D"]
position = Vector2(279.375, 273.125)
rotation = -0.58872
shape = SubResource("RectangleShape2D_a84k6")

[node name="Money" type="TextureButton" parent="."]
material = SubResource("ShaderMaterial_7rt5f")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -270.0
offset_right = 270.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(270, 270)
mouse_filter = 1
texture_normal = ExtResource("4_spjje")

[node name="MoneyArea2D" type="Area2D" parent="Money"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Money/MoneyArea2D"]
position = Vector2(264.118, 275.882)
shape = SubResource("RectangleShape2D_57ytf")

[node name="Friend" type="TextureButton" parent="."]
material = SubResource("ShaderMaterial_iwyyb")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -292.222
offset_right = 270.0
offset_bottom = 247.778
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(270, 270)
mouse_filter = 1
texture_normal = ExtResource("3_kd0kg")

[node name="FriendArea2D" type="Area2D" parent="Friend"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Friend/FriendArea2D"]
position = Vector2(242.059, 263.954)
rotation = -0.356685
shape = SubResource("CapsuleShape2D_vhdpm")

[node name="Card" type="TextureButton" parent="."]
material = SubResource("ShaderMaterial_oxh7g")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -270.0
offset_right = 270.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(270, 270)
mouse_filter = 2
texture_normal = ExtResource("2_0p086")

[node name="CardArea2D" type="Area2D" parent="Card"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card/CardArea2D"]
position = Vector2(271.471, 286.176)
rotation = -0.286587
shape = SubResource("RectangleShape2D_t3317")

[node name="Bag" type="TextureButton" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_qanm1")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.556
offset_top = -251.111
offset_right = 264.444
offset_bottom = 288.889
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(270, 270)
mouse_filter = 1
texture_normal = ExtResource("2_xckeb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ahtks")
}
